--- a/style.css
+++ b/style.css
@@ -4,8 +4,36 @@
     align-items: center;
 }
 
-#play {
+#rock {
     margin-top: 150px;
     height: 50px;
     width: 100px;
 }
+#paper {
+    margin-top: 150px;
+    height: 50px;
+    width: 100px;
+}
+#scissors {
+    margin-top: 150px;
+    height: 50px;
+    width: 100px;
+}
+
+#scores {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#player-score {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#computer-score {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
