--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #c1cad6;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 #b {
     display: flex;
     justify-content: center;
@@ -5,19 +10,27 @@
 }
 
 #rock {
-    margin-top: 150px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     height: 50px;
     width: 100px;
+    background-color: #bdbbb6;
 }
 #paper {
-    margin-top: 150px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     height: 50px;
     width: 100px;
+    margin-left: 20px;
+    background-color: #f5e4d7;
 }
 #scissors {
-    margin-top: 150px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     height: 50px;
     width: 100px;
+    margin-left: 20px;
+    background-color: #e8f0ff;
 }
 
 #scores {
@@ -29,27 +42,47 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding: 50px;
+    border: 2px black solid;
+    border-radius: 20px;
+    background-color: #d4adcf;
 }
 
 #computer-score {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding: 30px;
+    border: 2px black solid;
+    border-radius: 20px;
+    background-color: #d4adcf;
+}
+
+#computer-score h2 {
+    padding-top: 20px;
 }
 
 #output {
     display: flex;
     text-align: center;
     align-items: center;
-    margin-left: 35px;
+    flex: 0 0 200px;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom:20px;
+    border: black 5px solid;
+    border-radius: 20px;
+    background-color: #B1EDE8;
 }
 
 #reset {
     height: 50px;
     width: 100px;
+    background-color: #ff6978;
 }
 
 #new-game {
     height: 50px;
     width: 100px;
+    background-color: #92aa83;
 }
